problem on ios for hover fix

--- a/css/style.css
+++ b/css/style.css
@@ -207,10 +207,7 @@ nav {
 	text-decoration: none;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-	color: var(--clr-accent);
-}
+
 
 .nav-toggle {
 	padding: .1em;
@@ -464,29 +461,35 @@ nav {
 	padding: .5em .5em;
 }
 
-.portfolio-img:hover,
-.portfolio-item:focus .portfolio-img {
-	transform: scale(1.1);
-	opacity: .35;
-}
 
-.portfolio-item:focus {
-	position: relative;
-	z-index: 2;
-}
 
-/* My Work - Small Screens*/
-
-@media (max-width: 799px) and (min-width: 300px) {
-
-	.portfolio-img {
-		transition: none;
+@media(hover: hover) and (pointer: fine) {
 
 	.portfolio-img:hover,
-		.portfolio-item:focus .portfolio-img {
-			transform: none;
-			opacity: 1;
-		}
+	.portfolio-item:focus .portfolio-img {
+		transform: scale(1.1);
+		opacity: .35;
+	}
+	
+	.portfolio-item:focus {
+		position: relative;
+		z-index: 2;
+	}
+
+	.footer-link:hover,
+	.social-list-link:hover {
+	opacity: .7;
+	}
+
+	.footer-link:hover {
+	text-decoration: underline;
+	}
+
+	.nav-link:hover,
+	.nav-link:focus {
+		color: var(--clr-accent);
+	}
+
 }
 
 /* About Me - Small Screens */
@@ -587,14 +590,7 @@ footer a {
 	font-weight: var(--fw-bold);
 }
 
-.footer-link:hover,
-.social-list-link:hover {
-	opacity: .7;
-}
 
-.footer-link:hover {
-	text-decoration: underline;
-}
 
 .copyright {
 	font-size: var(--fs-caption);
